assets/styles/_footer.scss
> footer {
	grid-template-columns:      1fr;
	margin-top:                 var(--footer--spacing);
	row-gap:                    var(--margin);
	transition-duration:        400ms;
	transition-property:        margin;
	transition-timing-function: ease-in-out;
	will-change:                margin;

	@include landscape {
		grid-template-columns: var(--column--ratio);
	}

	p {
		@extend %font--weight-adjust;

		--typography--size: var(--typography--size--footer);

		--typography--weight-adjust: 0.01em; // Adjust to body copy.
	}



	// The colophon.
	> section:last-child {
		@extend %font--markdown;

		margin-right: var(--margin);

		@include landscape {
			margin-right: var(--pagination--gutter);
		}
	}
}

